--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
 			border-radius:10px;
 		}
 		.part:hover {
-			background-color: lightgreen;
+			background-color: white;
 		}
 	</style>
 	</head>
